<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    	
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:orientation="vertical" >
        
    <TextView
        android:id="@+id/txtPizzaTamanho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPizzaTamanho"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spPizzaTamanho"
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <TextView
        android:id="@+id/txtPizzaSabor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPizzaSabor1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spPizzaSabor1"
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <TextView
        android:id="@+id/txtPizzaSabor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPizzaSabor2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spPizzaSabor2"
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <TextView
        android:id="@+id/txtPizzaSabor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPizzaSabor3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spPizzaSabor3"
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <TextView
        android:id="@+id/txtPizzaBorda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPizzaBorda"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/cbPizzaSemBorda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPizzaSemBorda" />

        <CheckBox
            android:id="@+id/cbPizzaCatupiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtPizzaCatupiry" />

        <CheckBox
            android:id="@+id/cbPizzaCheddar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cbPizzaCheddar" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtPizzaObservacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPizzaObservacoes"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editPizzaObs"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btPizzaEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btPizzaEnviar" />
	
    </LinearLayout>
    
    </ScrollView>

</LinearLayout>