<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtMainMesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtMainMesa"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spMainMesa"
            android:layout_width="match_parent"
            android:layout_height="36dp" />

        <Button
            android:id="@+id/btMainFazerPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btMainIniciarPedido" />

        <Button
            android:id="@+id/btMainListar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btMainListar" />

        <Button
            android:id="@+id/btMainMesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btMainMesa" />

    </LinearLayout>

</RelativeLayout>