<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtBebidaBebida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBebidaBebida"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spBebidaBebida"
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <TextView
        android:id="@+id/txtBebidaQuantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBebidaQuantidade"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btBebidaEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btBebidaEnviar" />

</LinearLayout>